tests/rosetta/out/Zig/bioinformatics-sequence-mutation.error
zig build: exit status 1
/tmp/bioinformatics-sequence-mutation.zig:56:13: error: local variable is never mutated
/tmp/bioinformatics-sequence-mutation.zig:56:13: note: consider using 'const'
